--- a/index.html
+++ b/index.html
@@ -6,8 +6,24 @@
 </head>
 
 <body>
+  <h1>Some of the Hot Spots in SD</h1>
+  <table id="hotTable">
+  </table>
 
+
+
+
+
+
+  <script
+  src="https://code.jquery.com/jquery-3.1.1.js"
+  integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="
+  crossorigin="anonymous"></script>
   <script src="index.js"></script>
+  <script src="stylesheet.css"></script>
+
+  <!--<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+-->
 </body>
 
 <footer>
